tests/NormalTests/paczka1/small_fuzzy/70402454.err
Error in line 3: S346 S346 72,5
Error in line 8: FSS7Td A935 59,6
Error in line 10: S346 A21 96,1
